--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"dev":"tsc -b && node dist/index.js",
-      	  "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc -b && node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "@types/node": "^22.10.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "socket.io": "^4.8.1",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
